--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
     </div>   
         
-    <form class = "m-2">
+    <form class = "m-2" action = "submit.html">
         <label class="block mt-4 font-bold" for="name"> Name</label>
             <input class="p-2 w-64 border border-gray-400 rounded shadow-xl focus:outline-none focus:ring-purple-500
             focus:border-purple-500" type="text" id="name" name="name">
